Fixed #3654 : Resize handle should not be visible after maximize mode is enabled.
git-svn-id: https://svn.ckeditor.com/CKEditor/trunk@3611 da63caf2-3823-0410-a1e8-d69ccee00dfb

--- a/_source/skins/office2003/mainui.css
+++ b/_source/skins/office2003/mainui.css
@@ -66,6 +66,11 @@ For licensing, see LICENSE.html or http://ckeditor.com/license
 	cursor: se-resize;
 }
 
+.cke_skin_office2003 .cke_maximized .cke_resizer
+{
+	display: none;
+}
+
 .cke_skin_office2003 .cke_rtl .cke_resizer
 {
 	cursor: sw-resize;
