--- a/_source/skins/v2/mainui.css
+++ b/_source/skins/v2/mainui.css
@@ -77,6 +77,11 @@ For licensing, see LICENSE.html or http://ckeditor.com/license
 	cursor: se-resize;
 }
 
+.cke_skin_v2 .cke_maximized .cke_resizer
+{
+	display: none;
+}
+
 .cke_skin_v2 .cke_rtl .cke_resizer
 {
 	cursor: sw-resize;
